<resources>
    <string name="app_name">Screenie</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">1350604741954261</string>
    <string name="fb_login_protocol_scheme">fb1350604741954261</string>

    <string name="admob_app_id">ca-app-pub-5739291122483122~2055037339</string>

    <string name="onesignal_app_id">6db1a228-56c8-47b0-a804-33af3938c9a9</string>

    <string name="privacy_policy_url">https://screenie.atozhacks.in/privacy_policy.html</string>

    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Vijay+Chandra</string>
    <string name="yt_channel_link">https://www.youtube.com/channel/UCrc46l2-CkNX2DTTwHfZfYQ</string>
    <string name="tel_channel_link">https://t.me/screenieapp/</string>
    <string name="insta_link">https://instagram.com/screenie_official/</string>


    <!-- true if want to use RTL else false -->
    <string name="isRTL">false</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="categories">Categories</string>
    <string name="gifs">GIFs</string>
    <string name="favourite">Favourite</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="moreapp">More App</string>
    <string name="menu_about">About</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loading">Loading..</string>
    <string name="portrait_wallpaper">Portrait Wallpaper</string>
    <string name="view_all">View All</string>
    <string name="no_data_found">No Data Found</string>
    <string name="mostviewed">Most Viewed</string>
    <string name="square_wallpaper">Square Wallpaper</string>
    <string name="amazing_wall">Amazing Home Screen Setups in your Way!</string>
    <string name="title_activity_wallpaper">Wallpaper</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="download">Download</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="ratings">Ratings</string>
    <string name="tags">Tags</string>
    <string name="details">Details</string>
    <string name="downloading_wallpaper">Downloading Wallpaper..</string>
    <string name="please_wait">Please Wait..</string>
    <string name="wallpaper_saved">Wallpaper Saved</string>
    <string name="share_wallpaper">Share Wallpaper</string>
    <string name="please_try_again">Please try again</string>
    <string name="wallpaper_already_saved">Wallpaper Already Saved</string>
    <string name="added_to_fav">Added to favourite</string>
    <string name="removed_from_fav">Removed from favourite</string>
    <string name="set_wallpaper">Set As</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="rating">Rating</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="submit">Submit</string>
    <string name="internet_not_connected">Please connect to internet</string>
    <string name="server_no_conn">Server not connected</string>
    <string name="tab_fav_text_1">Wallpapers</string>
    <string name="tab_fav_text_2">GIFs</string>
    <string name="downloads">Downloads</string>
    <string name="gif_saved">GIF saved</string>
    <string name="gif_already_saved">GIF already saved</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="version">Version</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="downloading_gif">Downloading GIF</string>
    <string name="enter_rating">Please enter rating</string>
    <string name="download_path">Download Path</string>
    <string name="get_more_wall">Get more Amazing Home Screen Setups, Wallpapers from Screenie App! Download Now For Free</string>
    <string name="get_more_gif">Get more amazing GIFs, download now</string>
    <string name="rate_this_wall">Rate this Wallpaper</string>
    <string name="rate_this_gif">Rate this GIF</string>
    <string name="crop">Crop</string>
    <string name="dashboard">Dashboard</string>
    <string name="landscape_wallpaper">Landscape Wallpaper</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="square">Square</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="select_wall_type">Select Wallpaper Type</string>
    <string name="ok">OK</string>
    <string name="rated">Rated</string>
    <string name="popular">Popular</string>
    <string name="save">Save</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="rate_wall">How likely do you recommend Screenie to your Friends?</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Are you sure, Do you want to Exit the App?</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_lock_screen">Home Screen and Lock Screen</string>
    <string name="err_set_wall">Error when setting wallpaper</string>

    <string name="welcomeback">Welcome To Screenie</string>
    <string name="signin_to_continue">Please Sign In to Continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip Login</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="dnt_have_acc">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="login_success">Login Successful</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="name">Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="register">Register</string>
    <string name="already_acc">Already have an account?</string>
    <string name="phone">Phone</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_cpassword">Please Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="not_log">Not Logged In</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="min">min</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successful</string>
    <string name="invalid_user">Invalid User</string>
    <string name="update_prof_succ">Profile Updated Successfully</string>
    <string name="image">Image</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="recent_wallpaper">Recent Wallpapers</string>
    <string name="latest_wallpaper">Latest Setups</string>
    <string name="popular_wallpaper">Popular Setups</string>
    <string name="report_wall_">Report Setup:-</string>
    <string name="report_message">Enter your report here</string>
    <string name="enter_report">Enter your report message</string>
    <string name="report_gif_">Report GIF:-</string>
    <string name="toggle_wall_type">Toggle Wallpaper Type</string>
    <string name="click_chage_landscape">\nClick button to change wallpaper type to Landscape</string>
    <string name="click_chage_portrait">\nClick button to change wallpaper type to Portrait</string>
    <string name="click_chage_square">\nClick button to change wallpaper type to Square</string>
    <string name="go">GO</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="error_login_goole">Error while login with google</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>