<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/bg_white_dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <RadioGroup
                android:id="@+id/radioGroup_them"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton_system_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default"
                    android:textColor="@color/text_black"
                    app:buttonTint="@color/primary" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton_light_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/light"
                    android:textColor="@color/text_black"
                    app:buttonTint="@color/primary" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButton_dark_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dark"
                    android:textColor="@color/text_black"
                    app:buttonTint="@color/primary" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/textView_cancel_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    style="@style/Widget.MaterialComponents.Button.TextButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/textView_ok_them"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/ok"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>