<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_gif_latest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_gifs_selected"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="7dp"
            android:text="@string/latest"
            android:textColor="@color/gradient_color_2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_gif_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_gifs"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="7dp"
            android:text="@string/popular"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_gif_rated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_gifs"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="7dp"
            android:text="@string/rated"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container_gifs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
