<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fillViewport="true">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:text="@string/welcomeback"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signin_to_continue"
                android:textAlignment="center"
                android:textColor="@color/whiteAA"
                android:textSize="16sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_fb"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:padding="15dp"
                android:text="@string/login_fb"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="25dp"
                app:icon="@mipmap/ic_fb"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="18dp"
                app:iconTint="#1F88E4"
                app:strokeColor="@color/social_fb"
                app:strokeWidth="3dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_google"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:padding="15dp"
                android:text="@string/login_google"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="25dp"
                app:icon="@mipmap/ic_google"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="18dp"
                app:iconTint="@null"
                app:strokeColor="@color/social_ggle"
                app:strokeWidth="3dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_skip"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@null"
                app:cornerRadius="25dp"
                app:strokeColor="@color/white80"
                app:strokeWidth="3dp"/>
        </LinearLayout>

        <!--Email-->
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            >

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="7dp"
                    android:contentDescription="@string/image"
                    android:src="@mipmap/email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:theme="@style/TextLabel"
                    app:backgroundTint="@color/white">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:background="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:background="@color/white" />

            </LinearLayout>

        </RelativeLayout>

        <!--Password-->
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="7dp"
                    android:contentDescription="@string/image"
                    android:src="@mipmap/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:theme="@style/TextLabel"
                    app:backgroundTint="@color/white">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll2"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:background="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:background="@color/white" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            >

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/cb_rememberme"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:color_checked="@color/primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button_login"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="?attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/signup"
                android:textColor="@color/primary" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
